# AutoHVAC

./: .env.example  .gitignore  ARCHITECTURE.md  AUTH_IMPLEMENTATION_PLAN.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_VALIDATION.md  ENV_FILES_GUIDE.md  HVAC_CALCULATION_FIXES.md  HVAC_FIXES_IMPLEMENTED.md  IMPROVEMENTS_SUMMARY.md  MANUAL_J_IMPROVEMENTS_SUMMARY.md  MVP_TEST_INSTRUCTIONS.md  OPTIMIZATION_SUMMARY.md  PAYWALL_TESTING.md  PRD.md  README.md  RENDER_DEPLOYMENT_CHECKLIST.md  VERCEL_ENV_SETUP.md  ai_gap_filler.py  austin-claude-prompts.md  brief.md  code-compliance-strategy.md  docker-compose.override.yml  docker-compose.yml  git-logs.md  json_example.md  next.config.js  package-lock.json  professional_output_generator.py  render.yaml  tailwind.config.js  tailwind.config.ts  test_fixed_analysis.py  vercel.json
autohvac-app/backend/: .env.example  .flake8  .gitignore  3fea3f72-14e4-47e4-826f-a63c6ab95277_Executive_Summary.txt  3fea3f72-14e4-47e4-826f-a63c6ab95277_HVAC_Design.json  3fea3f72-14e4-47e4-826f-a63c6ab95277_HVAC_Layout.dxf  3fea3f72-14e4-47e4-826f-a63c6ab95277_Manual_J_Report.json  DEPLOYMENT.md  Dockerfile  README.md  add_test_endpoint.py  ai_gap_filler.py  build.sh  celery_app.py  climate_database.py  climate_database_sqlite.py  climate_zones.json  config.json  config_example.json  cors_fix_server.py  create_zip_database.py  debug_frontend_data.py  debug_request.py  dev_start.py  docker-compose.yml  enhanced_blueprint_processor.py  enhanced_blueprint_processor_backup.py  enhanced_blueprint_processor_working.py  fast_performance_test.py  load_test_data_to_job_storage.py  main.py  main_complex.py  minimal_cors_test.py  professional_output_generator.py  pyproject.toml  railway.toml  render.yaml  requirements.minimal.txt  requirements.txt  simple_performance_test.py  (+15 more)
autohvac-app/backend/api/: blueprint.py  blueprint_v2.py  calculations.py  climate.py  debug_calculations.py  export.py
autohvac-app/backend/app/: __init__.py  config.py  main.py
autohvac-app/backend/core/: __init__.py  blueprint_processor.py  data_models.py  error_handling.py  (+3 more)
(+618 files in other folders)
